# mcp-bot-test

./: .gitignore  README.md  alembic.ini  mcp-bot-test.md  project_info.md  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/: __init__.py
app/api/endpoints/: health.py  retrospective.py
app/core/: config.py  database.py
app/models/: __init__.py  partnership.py  task.py  user.py
app/schemas/: retrospective.py
app/services/: mcp_client.py  retrospective_service.py
external-repo/github-mcp-server-src/: Dockerfile  README.md
external-repo/github-mcp-server-src/docs/: server-configuration.md
external-repo/github-mcp-server-src/pkg/context/: request.go
external-repo/github-mcp-server-src/pkg/github/: issues.go  issues_test.go  minimal_types.go  pullrequests.go  pullrequests_test.go  repositories.go  repositories_test.go
external-repo/github-mcp-server-src/pkg/http/: handler.go  server.go
external-repo/github-mcp-server-src/pkg/http/middleware/: token.go  token_test.go
external-repo/github-mcp-server-src/pkg/utils/: token.go
external-repo/notion-mcp-server-src/: package-lock.json  package.json
prompts/: weekly_report.md
scripts/: mcp-servers.conf  mcp-test-all.sh  mcp-test-concurrent.sh  mcp-test-health.sh  mcp-test-load.sh  mcp-test-sessions.sh
